# aiogram_dialog_manager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
aiogram_dialog_manager/: __init__.py  dialog.py  manager.py
aiogram_dialog_manager/filter/: __init__.py  access.py  button.py  data.py  dialog.py  state.py
aiogram_dialog_manager/instance/: __init__.py  button.py  menu.py  message.py
aiogram_dialog_manager/prototype/: __init__.py  button.py  menu.py
aiogram_dialog_manager/storage/: base.py  memory.py  redis.py
src/aiogram_dialog_manager/: __init__.py  dialog_manager.py  dialog_operator.py
tests/: conftest.py  helpers.py
tests/dialog_manager/: test_callback_middleware.py  test_chat_member_updated_middleware.py  test_crud.py  test_edited_message_middleware.py  test_find_button.py  test_message_middleware.py  test_message_reaction_middleware.py  test_poll_answer_middleware.py  test_setup.py  test_standalone_menu.py  test_ttl_and_cleanup.py
tests/dialog_operator/: test_delete_all_messages.py  test_delete_message.py  test_delete_node.py  test_delete_reply_markup.py  test_edit_live_location.py  test_edit_media.py  test_edit_message.py  test_edit_reply_markup.py  test_prepare_instance.py  test_properties.py  test_reply.py  test_rollback.py  test_send_media.py  test_send_message.py  test_user_message.py
tests/filters/: test_button_filter.py  test_dialog_access_filter.py  test_dialog_filter.py  test_edited_message_filter.py  test_menu_filter.py  test_message_filter.py
tests/instance/: test_base_dialog_model.py  test_menu_instance.py  (+7 more)
(+55 files in other folders)
